# hyprwall

./: CHANGELOG.md  README.md  pyproject.toml
hyprwall/: __init__.py
hyprwall/cli/: __init__.py  main.py
hyprwall/core/: __init__.py  api.py  detect.py  hypr.py  optimize.py  paths.py  policy.py  power.py  runner.py  session.py
hyprwall/gui/: __init__.py  app.py  window.py
hyprwall/gui/controllers/: __init__.py  library_controller.py
hyprwall/gui/style/: style.css
hyprwall/gui/ui/: window.ui
hyprwall/gui/widgets/: __init__.py  circular_gauge.py  perf_panel.py  sparkline.py
hyprwall/perf/: README.md  monitor.py  widget.py
hyprwall/perf/collectors/: __init__.py  fps_mpv.py  power.py
